# hypekicks

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
project/accounts/: admin.py  forms.py  models.py  urls.py  views.py
project/accounts/migrations/: 0001_initial.py  0002_customuser_verification_status.py  0003_customuser_date_joined.py
project/core/: forms.py  urls.py  views.py
project/orders/: admin.py  models.py  urls.py  views.py
project/orders/migrations/: 0001_initial.py
project/products/: admin.py  models.py  urls.py  views.py
project/products/migrations/: 0001_initial.py  0002_producttag_size_alter_product_options_and_more.py  0003_remove_product_url_product_slug.py  0004_alter_product_slug.py  0005_cartitem.py
project/profiles/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
project/profiles/migrations/: 0001_initial.py  0002_profile_first_name_profile_last_name.py  0003_remove_profile_slug.py
project/project/: settings.py  urls.py
project/static/css/: akar-icons.css  akar.css  fonts.css  icons.css  input.css  main.css
project/static/images/: background.webp:Zone.Identifier
project/static/js/: alpine.min.js  alpine_focus.min.js  alpine_typew.min.js
project/tailwind/: package-lock.json  package.json  tailwind.config.js
project/templates/: about_us.html  base.html  index.html  login.html  signup.html
project/templates/cotton/: alert_error.html  alert_warning.html  cart.html  footer.html  header.html  hero.html  link_underline.html  login_modal.html  login_modal_partial.html  login_partial.html  navbar.html  (+3 more)
(+22 files in other folders)
