[project]
name = "hypekicks"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cotton>=1.0.9",
    "django-environ>=0.11.2",
    "django-htmx>=1.19.0",
    "django>=5.1.1",
    "psycopg2-binary>=2.9.9",
]

[tool.uv]
dev-dependencies = [
    "commitizen>=3.29.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
